# pytest-snapmock

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pytest_snapmock/: plugin.py
tests/: mylib.py  test_plugin.py
tests/__snapshot__/: test_foo_mylib_foo_0.hash  test_foo_paramed[100]_mylib_foo_0.hash  test_foo_paramed[1]_mylib_foo_0.hash  test_foo_paramed[1]_mylib_foo_1.hash  test_foo_paramed[1]_mylib_foo_2.hash  test_foo_paramed[1]_mylib_foo_3.hash  test_foo_paramed[2]_mylib_foo_0.hash
